# Fionica-AI-Chatbot-Project

./: .gitignore  Fionica-Ai-Chatbot-Project.sln  README.md
Backend_Agents/: pyproject.toml
Backend_Agents/Kokomi_chatbot/agents_config/: __init__.py  agents.py
Backend_Agents/Kokomi_chatbot/data_config/: __init__.py  llama_rag_tool.py
Backend_Agents/Kokomi_chatbot/llm_config/: __init__.py  llm_models.py
Backend_Agents/Kokomi_chatbot/tasks_config/: tasks.py
Backend_Agents/Kokomi_chatbot/the_crew/: crew_engine.py
Backend_Agents/sample_agents/: README.md  pyproject.toml
Backend_Agents/sample_agents/src/sample_agents/: crew.py  main.py
Fionica-Ai-Chatbot-Project.Api/: Fionica-Ai-Chatbot-Project.Api.csproj
Fionica-Ai-Chatbot-Project.Api/Properties/: launchSettings.json
Fionica-Ai-Chatbot-Project.CrewAI/: main.py  pyproject.toml
Fionica-Ai-Chatbot-Project.CrewAI/fionica_baby_chatbot/: README.md  pyproject.toml
Fionica-Ai-Chatbot-Project.CrewAI/fionica_baby_chatbot/knowledge/: fionica_identity.py
Fionica-Ai-Chatbot-Project.CrewAI/fionica_baby_chatbot/src/fionica_baby_chatbot/: crew.py  main.py  report.md
Fionica-Ai-Chatbot-Project.CrewAI/fionica_baby_chatbot/src/fionica_baby_chatbot/config/: agents.yaml  tasks.yaml
