[project]
name = "backend-agents"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "crewai>=0.118.0",
    "crewai-tools>=0.43.0",
    "docx2txt>=0.9",
    "langchain-groq>=0.3.2",
    "llama-index>=0.12.34",
    "llama-index-embeddings-huggingface>=0.5.3",
    "llama-index-llms-groq>=0.3.1",
    "pdf2txt>=0.7.14",
]
