[project]
name = "sample_agents"
version = "0.1.0"
description = "sample_agents using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.118.0,<1.0.0"
]

[project.scripts]
sample_agents = "sample_agents.main:run"
run_crew = "sample_agents.main:run"
train = "sample_agents.main:train"
replay = "sample_agents.main:replay"
test = "sample_agents.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
