[project]
name = "fionica_baby_chatbot"
version = "0.1.0"
description = "fionica_baby_chatbot using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.114.0,<1.0.0"
]

[project.scripts]
fionica_baby_chatbot = "fionica_baby_chatbot.main:run"
run_crew = "fionica_baby_chatbot.main:run"
train = "fionica_baby_chatbot.main:train"
replay = "fionica_baby_chatbot.main:replay"
test = "fionica_baby_chatbot.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
